@@ -1,0 +1,18 @@
+<?php
+/** Uyghur language file ( Oyghurque )
+  *
+  * @package MediaWiki
+  * @subpackage Language
+  */
+
+require_once( 'LanguageUtf8.php' );
+
+class LanguageUg extends LanguageUtf8 {
+	#FIXME: inherit almost everything for now
+
+	function isRTL() {
+		return true;
+	}
+}
+
+?>
